feat: add Execute reference clients
